--- a/src/css/common.css
+++ b/src/css/common.css
@@ -9,10 +9,38 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
-  line-height: 1.5;
+  line-height: 1.25;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+.timer{
+display: flex;
+gap: 8px;
+margin-top: 24px;
+}
+
+.field{
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+
+background-color: rgb(209, 215, 222);
+border-color: black;
+border-radius: 8px;
+
+height: 45px;
+width: 65px;
+}
+
+.value{
+font-size: 16px;
+}
+
+.label{
+font-size: 16px;
 }
